--- a/frontend/index.html
+++ b/frontend/index.html
@@ -29,8 +29,8 @@
     <link rel="icon" href="frontend/images/ak_logo.png" type="image/png">
 
     <!-- Stylesheets -->
-    <link rel="stylesheet" href="frontend/css/main.css">
-    <link rel="stylesheet" href="frontend/css/home.css">
+    <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="css/home.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 
     <!-- Google Analytics 4 -->
